fix: gap (test)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,6 @@ body {
   border: none;
   padding: 20px 35px;
   align-items: flex-start;
-  gap: 10px;
   border-radius: 14px;
   background: var(--vermelho);
   color: var(--grey);
@@ -97,7 +96,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 3rem;
   width: 100%;
   height: 100%;
 }
